--- a/src/global.css
+++ b/src/global.css
@@ -53,6 +53,20 @@ input {
 	border-radius: 8px;
 }
 
+main {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	height: 100vh;
+	gap: 1rem;
+}
+
+.title {
+	font-size: 2rem;
+	padding-bottom: 4rem;
+}
+
 /* 6. Utility classes (optional) */
 .container {
 	max-width: 960px;
